--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "symfony/swiftmailer-bundle",
+    "name": "94noni/swiftmailer-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony SwiftmailerBundle",
+    "description": "Symfony SwiftmailerBundle (v6)",
     "keywords": [],
     "homepage": "http://symfony.com",
     "license": "MIT",
@@ -17,19 +17,16 @@
     ],
     "require": {
         "php": ">=7.1",
-        "swiftmailer/swiftmailer": "^6.1.3",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/config": "^4.4|^5.0"
+        "swiftmailer/swiftmailer": "^6.3",
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/config": "^5.4|^6.0"
     },
     "require-dev": {
-        "symfony/console": "^4.4|^5.0",
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/phpunit-bridge": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0"
-    },
-    "conflict": {
-        "twig/twig": "<1.41|>=2.0,<2.10"
+        "symfony/console": "^5.4|^6.0",
+        "symfony/framework-bundle": "^5.4|^6.0",
+        "symfony/phpunit-bridge": "^5.4|^6.0",
+        "symfony/yaml": "^5.4|^6.0"
     },
     "autoload": {
         "psr-4": { "Symfony\\Bundle\\SwiftmailerBundle\\": "" },
